add 3 initial page of record sound, add text and add image

--- a/src/app/addImage/addImage.page.html
+++ b/src/app/addImage/addImage.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Sound Canva
+      Add Image
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,9 +9,9 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Sound Canva</ion-title>
+      <ion-title size="large">Add Image</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Sound Canva page"></app-explore-container>
+  <app-explore-container name="Add Image page"></app-explore-container>
 </ion-content>
