--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,19 +1,19 @@
 <ion-tabs>
 
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="soundcanva">
+    <ion-tab-button tab="recordSound">
       <ion-icon name="triangle"></ion-icon>
-      <ion-label>Sound Canva</ion-label>
+      <ion-label>Record Sound</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2">
+    <ion-tab-button tab="addText">
       <ion-icon name="ellipse"></ion-icon>
-      <ion-label>Tab 2</ion-label>
+      <ion-label>Add Text</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3">
+    <ion-tab-button tab="addImage">
       <ion-icon name="square"></ion-icon>
-      <ion-label>Tab 3</ion-label>
+      <ion-label>Add Image</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
