UI development of the tabs navigation

--- a/src/app/addImage/addImage.page.html
+++ b/src/app/addImage/addImage.page.html
@@ -13,5 +13,5 @@
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Add Image page"></app-explore-container>
+  <app-explore-container name="Adding Image"></app-explore-container>
 </ion-content>
