--- a/src/app/recordSound/recordSound.page.html
+++ b/src/app/recordSound/recordSound.page.html
@@ -13,5 +13,5 @@
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Record Sound page"></app-explore-container>
+  <app-explore-container name="Record Sound"></app-explore-container>
 </ion-content>
