--- a/src/app/addText/addText.page.html
+++ b/src/app/addText/addText.page.html
@@ -13,5 +13,5 @@
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Add Text page"></app-explore-container>
+  <app-explore-container name="Adding Text"></app-explore-container>
 </ion-content>
