--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,22 @@
 <ion-app>
   <ion-router-outlet></ion-router-outlet>
 </ion-app>
+
+<ion-tabs>
+  <ion-tab-bar slot="bottom">
+    <ion-tab-button tab="recordSound">
+      <ion-icon name="play-circle-outline"></ion-icon>
+      <ion-label>Record Sound</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button tab="addText">
+      <ion-icon name="text-outline"></ion-icon>
+      <ion-label>Add Text</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button tab="addImage">
+      <ion-icon name="image-outline"></ion-icon>
+      <ion-label>Add Image</ion-label>
+    </ion-tab-button>
+  </ion-tab-bar>
+</ion-tabs>
