--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,19 @@
 </ion-app>
 
 <ion-tabs>
+  <ion-tab-bar slot="top">
+    <ion-title>
+      Card IT!
+    </ion-title>
+    <ion-tab-button tab="share">
+      <ion-icon name="share-outline"></ion-icon>
+      <ion-label>Share</ion-label>
+    </ion-tab-button>
+    <ion-tab-button tab="share">
+      <ion-icon name="print-outline"></ion-icon>
+      <ion-label>Art Print</ion-label>
+    </ion-tab-button>
+  </ion-tab-bar>
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="recordSound">
       <ion-icon name="play-circle-outline"></ion-icon>
