UI components of the layout for planned record, add text and image

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,35 +1,35 @@
 <ion-app>
   <ion-router-outlet></ion-router-outlet>
+  
+  <ion-tabs>
+    <ion-tab-bar slot="top">
+      <ion-title>
+        Card IT!
+      </ion-title>
+      <ion-tab-button tab="share">
+        <ion-icon name="share-outline"></ion-icon>
+        <ion-label>Share</ion-label>
+      </ion-tab-button>
+      <ion-tab-button tab="share">
+        <ion-icon name="print-outline"></ion-icon>
+        <ion-label>Art Print</ion-label>
+      </ion-tab-button>
+    </ion-tab-bar>
+    <ion-tab-bar slot="bottom">
+      <ion-tab-button tab="recordSound">
+        <ion-icon name="musical-notes"></ion-icon>
+        <ion-label>Record Sound</ion-label>
+      </ion-tab-button>
+
+      <ion-tab-button tab="addText">
+        <ion-icon name="text-outline"></ion-icon>
+        <ion-label>Add Text</ion-label>
+      </ion-tab-button>
+
+      <ion-tab-button tab="addImage">
+        <ion-icon name="image-outline"></ion-icon>
+        <ion-label>Add Image</ion-label>
+      </ion-tab-button>
+    </ion-tab-bar>
+  </ion-tabs>
 </ion-app>
-
-<ion-tabs>
-  <ion-tab-bar slot="top">
-    <ion-title>
-      Card IT!
-    </ion-title>
-    <ion-tab-button tab="share">
-      <ion-icon name="share-outline"></ion-icon>
-      <ion-label>Share</ion-label>
-    </ion-tab-button>
-    <ion-tab-button tab="share">
-      <ion-icon name="print-outline"></ion-icon>
-      <ion-label>Art Print</ion-label>
-    </ion-tab-button>
-  </ion-tab-bar>
-  <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="recordSound">
-      <ion-icon name="play-circle-outline"></ion-icon>
-      <ion-label>Record Sound</ion-label>
-    </ion-tab-button>
-
-    <ion-tab-button tab="addText">
-      <ion-icon name="text-outline"></ion-icon>
-      <ion-label>Add Text</ion-label>
-    </ion-tab-button>
-
-    <ion-tab-button tab="addImage">
-      <ion-icon name="image-outline"></ion-icon>
-      <ion-label>Add Image</ion-label>
-    </ion-tab-button>
-  </ion-tab-bar>
-</ion-tabs>
