--- a/src/app/recordSound/recordSound.page.html
+++ b/src/app/recordSound/recordSound.page.html
@@ -1,9 +1,13 @@
 <ion-content [fullscreen]="true">
+
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">Record Sound</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Record Sound"></app-explore-container>
+  <ion-tab-button>
+    <ion-icon size="large" name="play-circle"></ion-icon>
+  </ion-tab-button>
+  
 </ion-content>
