feature of windwill as the card background and the function of editing the text

--- a/src/app/addText/addText.page.html
+++ b/src/app/addText/addText.page.html
@@ -6,8 +6,22 @@
     </ion-toolbar>
   </ion-header>
 
-  <ion-tab-button>
-    <ion-icon size="large" name="play-circle"></ion-icon>
-  </ion-tab-button>
+  <div class = "windmill">
+    <div class="hills" contenteditable="true">
+      <p>Edit this content to add your own words</p>
+    </div>
+    <div class="hills2"></div>
+
+    <div class="wheel">
+      <div class="windwheel"></div>
+      <div class="windwheel2"></div>
+      <div class="windwheel3"></div>
+      <div class="windwheel4"></div>
+    </div>
+    <div class="roof"></div>
+    <div class="mill"></div>
+    <div class="cloud"></div>
+    <div class="cloud2"></div>
+  </div>
 
 </ion-content>
