code cleaning and code refactor

--- a/src/app/applyTheme/applyTheme.page.html
+++ b/src/app/applyTheme/applyTheme.page.html
@@ -8,7 +8,7 @@
 
   <div class = "windmill">
     <div class="hills" contenteditable="true">
-      <p>Edit this content to add your own words</p>
+      <p>edit your words</p>
     </div>
     <div class="hills2"></div>
 
