--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,9 +23,9 @@
         <ion-label>Record Sound</ion-label>
       </ion-tab-button>
 
-      <ion-tab-button tab="addText">
-        <ion-icon name="text-outline"></ion-icon>
-        <ion-label>Add Text</ion-label>
+      <ion-tab-button tab="applyTheme">
+        <ion-icon name="color-wand-outline"></ion-icon>
+        <ion-label>Apply Theme</ion-label>
       </ion-tab-button>
 
       <ion-tab-button for="input" >
