add the slider options for the themes

--- a/src/app/applyTheme/applyTheme.page.html
+++ b/src/app/applyTheme/applyTheme.page.html
@@ -24,4 +24,14 @@
     <div class="cloud2"></div>
   </div>
 
+  <ion-slides [options]="{ slidesPerView: true, loop: true }">
+    <ion-slide>
+      
+      Slide 1
+
+    </ion-slide>
+    <ion-slide>Slide 2</ion-slide>
+    <ion-slide>Slide 3</ion-slide>
+  </ion-slides>
+
 </ion-content>
