--- a/src/app/applyTheme/applyTheme.page.html
+++ b/src/app/applyTheme/applyTheme.page.html
@@ -45,3 +45,12 @@
   </ion-slides>
 
 </ion-content>
+
+<ion-footer>
+	<ion-toolbar color="primary">
+		<ion-button fill="clear" expand="full" color="light" (click)="selectImage()">
+			<ion-icon slot="start" name="camera"></ion-icon>
+			Select Image
+		</ion-button>
+	</ion-toolbar>
+</ion-footer>
