--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,7 +31,7 @@
       <ion-tab-button for="input" >
         <ion-icon name="image-outline" for="input"></ion-icon>
         <label for="input" >Add Image</label>
-        <input id="input" type="file" id="bgchanger" value="Add Image" class ="hideInput" (click)="getbackground()"/>    
+        <input id="input" type="file" id="bgchanger" value="Add Image" class ="hideInput" (click)="selectImage()"/>    
       </ion-tab-button>
 
     </ion-tab-bar>
