--- a/src/app/applyTheme/applyTheme.page.html
+++ b/src/app/applyTheme/applyTheme.page.html
@@ -34,7 +34,7 @@
     </ion-button>
   </ion-item>
 
-  <ion-slides [options]="{ slidesPerView: true, loop: true }">
+  <ion-slides [options]="slideOpts">
     <ion-slide>
       
       Slide 1
