--- a/src/app/applyTheme/applyTheme.page.scss
+++ b/src/app/applyTheme/applyTheme.page.scss
@@ -276,3 +276,58 @@ body {
     transform: translateX(340px);
   }
 }
+
+.dog {
+  position: relative;
+  width: 180px;
+  height: 160px;
+  margin: 0 auto;
+}
+.dog-body {
+  position: absolute;
+  width: 100px;
+  height: 70px;
+  background-color: #f0d6b2;
+  border-radius: 70px 70px 70px 70px/50px 50px 20px 20px;
+  left: 40px;
+  top: 60px;
+  z-index: 1;
+  transform-origin: bottom center;
+  animation: dog-body 0.6s infinite alternate;
+}
+.dog-head {
+  position: absolute;
+  width: 70px;
+  height: 70px;
+  background-color: #f0d6b2;
+  border-radius: 70px 70px 70px 70px/50px 50px 50px 50px;
+  left: 10px;
+  top: 30px;
+  z-index: 2;
+  transform-origin: bottom center;
+  animation: dog-head 0.6s infinite alternate;
+}
+.bone {
+  position: absolute;
+  width: 40px;
+  height: 10px;
+  background-color: #f4e1c7;
+  border-radius: 5px;
+  left: 120px;
+  top: 95px;
+  z-index: 3;
+  transform-origin: center center;
+  animation: bone 0.6s infinite alternate;
+}
+@keyframes dog-body {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(20deg); }
+}
+@keyframes dog-head {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(-20deg); }
+}
+@keyframes bone {
+  0% { transform: translateX(0); }
+  100% { transform: translateX(10px); }
+}
