--- a/src/app/applyTheme/applyTheme.page.scss
+++ b/src/app/applyTheme/applyTheme.page.scss
@@ -454,3 +454,248 @@ body {
   position: absolute;
   width: 20  
 }
+
+/*
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Pure CSS Animated Lotus</title>
+	<style type="text/css">
+		.lotus {
+			position: relative;
+			height: 200px;
+			width: 200px;
+			margin: 50px auto;
+			border-radius: 50%;
+			background-color: #f4e9be;
+			box-shadow: 0 0 15px 10px #f4e9be;
+			animation: animateLotus 4s ease-in-out infinite;
+		}
+
+		.lotus:before, .lotus:after {
+			content: "";
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			transform: translate(-50%, -50%);
+			height: 100px;
+			width: 100px;
+			background-color: #f7d6c3;
+			border-radius: 50%;
+			box-shadow: 0 0 15px 5px #f7d6c3;
+			animation: animateLotus 4s ease-in-out infinite;
+		}
+
+		.lotus:before {
+			top: 20%;
+			left: 20%;
+			animation-delay: 1s;
+		}
+
+		.lotus:after {
+			top: 80%;
+			left: 80%;
+			animation-delay: 2s;
+		}
+
+		@keyframes animateLotus {
+			0%, 100% {
+				transform: rotate(0);
+			}
+			50% {
+				transform: rotate(180deg);
+			}
+		}
+	</style>
+</head>
+<body>
+	<div class="lotus"></div>
+</body>
+</html>
+*/
+
+/*
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Pure CSS Animated Sun System</title>
+	<style type="text/css">
+		body {
+			background-color: #000;
+		}
+
+		.sun {
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			transform: translate(-50%, -50%);
+			height: 100px;
+			width: 100px;
+			background-color: yellow;
+			border-radius: 50%;
+			box-shadow: 0 0 30px 15px yellow;
+			animation: rotateSun 10s linear infinite;
+		}
+
+		.planet {
+			position: absolute;
+			height: 50px;
+			width: 50px;
+			background-color: #4d4dff;
+			border-radius: 50%;
+			box-shadow: 0 0 30px 15px #4d4dff;
+			animation: orbitPlanet 6s linear infinite;
+		}
+
+		.planet1 {
+			top: 50%;
+			left: 30%;
+			animation-delay: 2s;
+		}
+
+		.planet2 {
+			top: 30%;
+			left: 60%;
+			animation-delay: 4s;
+		}
+
+		.planet3 {
+			top: 80%;
+			left: 80%;
+			animation-delay: 6s;
+		}
+
+		.planet4 {
+			top: 20%;
+			left: 10%;
+			animation-delay: 8s;
+		}
+
+		@keyframes rotateSun {
+			0% {
+				transform: rotate(0);
+			}
+			100% {
+				transform: rotate(360deg);
+			}
+		}
+
+		@keyframes orbitPlanet {
+			0% {
+				transform: translate(0, 0) rotate(0);
+			}
+			100% {
+				transform: translate(-100px, 0) rotate(360deg);
+			}
+		}
+	</style>
+</head>
+<body>
+	<div class="sun"></div>
+	<div class="planet planet1"></div>
+	<div class="planet planet2"></div>
+	<div class="planet planet3"></div>
+	<div class="planet planet4"></div>
+</body>
+</html>
+*/
+
+.dandelion-container {
+  height: 200px;
+  position: relative;
+  //overflow: hidden;
+}
+
+.dandelion {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  animation: blow 4s linear infinite;
+}
+
+.stem {
+  width: 2px;
+  height: 100px;
+  background-color: #0a0a0a;
+  margin: 0 auto;
+}
+
+.head {
+  position: relative;
+  width: 60px;
+  height: 60px;
+  margin: 0 auto;
+  transform: translateY(-100%);
+  border-radius: 50%;
+  background-color: #e5b256;
+  box-shadow: 0px 0px 10px #e5b256;
+  animation: shake 4s linear infinite;
+}
+
+.petal {
+  position: absolute;
+  width: 12px;
+  height: 28px;
+  background-color: #f7e4bf;
+  transform-origin: bottom center;
+  border-radius: 50%;
+}
+
+.petal:nth-of-type(1) {
+  transform: rotate(0deg) translate(25px, -20px);
+  animation: move-petal-1 4s linear infinite;
+}
+
+.petal:nth-of-type(2) {
+  transform: rotate(45deg) translate(25px, -20px);
+  animation: move-petal-2 4s linear infinite;
+}
+
+.petal:nth-of-type(3) {
+  transform: rotate(90deg) translate(25px, -20px);
+  animation: move-petal-3 4s linear infinite;
+}
+
+.petal:nth-of-type(4) {
+  transform: rotate(135deg) translate(25px, -20px);
+  animation: move-petal-4 4s linear infinite;
+}
+
+.petal:nth-of-type(5) {
+  transform: rotate(180deg) translate(25px, -20px);
+  animation: move-petal-5 4s linear infinite;
+}
+
+.petal:nth-of-type(6) {
+  transform: rotate(225deg) translate(25px, -20px);
+  animation: move-petal-6 4s linear infinite;
+}
+
+.petal:nth-of-type(7) {
+  transform: rotate(270deg) translate(25px, -20px);
+  animation: move-petal-7 4s linear infinite;
+}
+
+.petal:nth-of-type(8) {
+  transform: rotate(315deg) translate(25px, -20px);
+  animation: move-petal-8 4s linear infinite;
+}
+
+@keyframes shake {
+  0% { transform: translateY(-100%) rotate(0deg); }
+  25% { transform: translateY(-100%) rotate(10deg); }
+  50% { transform: translateY(-100%) rotate(0deg);	}
+		}
+
+		@keyframes blow {
+			0% {
+				transform: rotateZ(0) translateY(0);
+			}
+			50% {
+				transform: rotateZ(180deg) translateY(-20px);
+			}
+			100% {
+				transform: rotateZ(360deg) translateY(0);
+			}
+		}
