--- a/src/app/applyTheme/applyTheme.page.scss
+++ b/src/app/applyTheme/applyTheme.page.scss
@@ -600,6 +600,359 @@ body {
 </html>
 */
 
+/*
+
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Pure CSS Animated Dandelion Flower</title>
+	<style type="text/css">
+body {
+  margin: 0;
+  padding: 0;
+}
+
+:root {
+  --sun-color: #ffd700;
+  --ocean-color: #008b8b;
+  --wave-color: #1e90ff;
+  --sky-color: #f5deb3;
+  --cloud-color: #fffafa transparent;
+}
+
+.sunset {
+  height: 100vh;
+  position: relative;
+  overflow: hidden;
+}
+
+.sun {
+  position: absolute;
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  background: var(--sun-color);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  animation: sun-rise 10s ease-out forwards;
+}
+
+@keyframes sun-rise {
+  0% {
+    transform: translate(-50%, -50%) scale(0.5);
+    opacity: 0;
+  }
+  50% {
+    transform: translate(-50%, -50%) scale(1);
+    opacity: 1;
+  }
+  100% {
+    transform: translate(-50%, -100%) scale(1);
+    opacity: 0;
+  }
+}
+
+.ocean {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 60%;
+  background: var(--ocean-color);
+  animation: ocean-waves 10s linear infinite;
+}
+
+@keyframes ocean-waves {
+  0% {
+    background-position-x: 0;
+  }
+  100% {
+    background-position-x: 100%;
+  }
+}
+
+.waves {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url("https://cdn.pixabay.com/photo/2018/07/14/15/27/waves-3535408_960_720.png") repeat-x 0 0;
+}
+
+.sunset::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 40%;
+  background: var(--sky-color);
+}
+
+.sunset::after {
+  content: "";
+  position: absolute;
+  top: 20%;
+  left: 10%;
+  width: 80%;
+  height: 30%;
+  border-radius: 50%;
+  background: var(--cloud-color);
+  animation: cloud-move 10s linear infinite;
+}
+
+@keyframes cloud-move {
+  0% {
+    transform: translateX(-10%);
+  }
+  100% {
+    transform: translateX(110%);
+  }
+}
+
+	</style>
+</head>
+<body>
+<div class="sunset">
+  <div class="sun"></div>
+  <div class="ocean">
+    <div class="waves"></div>
+  </div>
+</div>
+</body>
+</html>
+
+
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Pure CSS Animated Dandelion Flower</title>
+	<style type="text/css">
+.ocean {
+  width: 100%;
+  height: 400px;
+  background: linear-gradient(to bottom, #f6d365, #fda085);
+  position: relative;
+  overflow: hidden;
+}
+
+.sun {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  background: #fff7a3;
+  position: absolute;
+  top: 150px;
+  left: 10px;
+  animation: sun-rise 5s linear infinite;
+}
+
+@keyframes sun-rise {
+  0% {
+    transform: translateX(0) translateY(-200px);
+  }
+  50% {
+    transform: translateX(200px) translateY(0);
+  }
+  100% {
+    transform: translateX(0) translateY(-200px);
+  }
+}
+
+.waves {
+  position: absolute;
+  width: 100%;
+  height: 200px;
+  bottom: 0;
+  left: 0;
+  overflow: hidden;
+}
+
+.wave {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  background-color: #fff;
+  opacity: 0.5;
+  animation: wave 2s infinite linear;
+}
+
+.wave:nth-child(2) {
+  animation-delay: -1s;
+}
+
+.wave:nth-child(3) {
+  animation-delay: -0.5s;
+}
+
+@keyframes wave {
+  0% {
+    transform: scaleY(1);
+  }
+  50% {
+    transform: scaleY(0.4);
+  }
+  100% {
+    transform: scaleY(1);
+  }
+}
+
+
+	</style>
+</head>
+<body>
+<div class="ocean">
+  <div class="sun"></div>
+  <div class="waves">
+    <div class="wave"></div>
+    <div class="wave"></div>
+    <div class="wave"></div>
+  </div>
+</div>
+</body>
+</html>
+
+*/
+
+/*
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Pure CSS Animated Dandelion Flower</title>
+	<style type="text/css">
+.piano {
+  display: flex;
+  flex-wrap: wrap;
+  width: 800px;
+  margin: 0 auto;
+}
+
+.key {
+  width: 60px;
+  height: 200px;
+  margin-right: -5px;
+  background-color: #f1f1f1;
+  border: 1px solid #ccc;
+  position: relative;
+}
+
+.white {
+  border-radius: 0 0 5px 5px;
+}
+
+.black {
+  width: 40px;
+  height: 120px;
+  background-color: #000;
+  border-radius: 0 0 3px 3px;
+  position: absolute;
+  top: 0;
+  left: 25px;
+}
+
+.black:before {
+  content: "";
+  position: absolute;
+  width: 30px;
+  height: 80px;
+  background-color: #000;
+  transform: rotate(-45deg);
+  top: -80px;
+  left: -5px;
+}
+
+.key:nth-child(2),
+.key:nth-child(4),
+.key:nth-child(7),
+.key:nth-child(9),
+.key:nth-child(11) {
+  margin-left: -30px;
+}
+
+.key:nth-child(2),
+.key:nth-child(7),
+.key:nth-child(11) {
+  background-color: #000;
+  z-index: 1;
+}
+
+.key:nth-child(2):before,
+.key:nth-child(7):before,
+.key:nth-child(11):before {
+  content: "";
+  position: absolute;
+  width: 30px;
+  height: 80px;
+  background-color: #000;
+  transform: rotate(-45deg);
+  top: -80px;
+  left: 10px;
+}
+
+.key:nth-child(4),
+.key:nth-child(9) {
+  margin-left: -65px;
+}
+
+.key:nth-child(4),
+.key:nth-child(9) {
+  background-color: #000;
+  z-index: 1;
+}
+
+.key:nth-child(4):before,
+.key:nth-child(9):before {
+  content: "";
+  position: absolute;
+  width: 30px;
+  height: 80px;
+  background-color: #000;
+  transform: rotate(-45deg);
+  top: -80px;
+  left: 40px;
+}
+
+@keyframes keypress {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(10px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+.key:active {
+  animation: keypress 0.2s linear;
+}
+
+	</style>
+</head>
+<body>
+<div class="piano">
+  <div class="key white"></div>
+  <div class="key black"></div>
+  <div class="key white"></div>
+  <div class="key black"></div>
+  <div class="key white"></div>
+  <div class="key white"></div>
+  <div class="key black"></div>
+  <div class="key white"></div>
+  <div class="key black"></div>
+  <div class="key white"></div>
+  <div class="key black"></div>
+  <div class="key white"></div>
+</div>
+
+</body>
+</html>
+*/
+
 .dandelion-container {
   height: 200px;
   position: relative;
